; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_modpybswitch.c_pyb_switch_print.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_modpybswitch.c_pyb_switch_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"Switch(%u)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pyb_switch_print(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %5, align 8
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @SWITCH_ID(i32* %10)
  %12 = call i32 @mp_printf(i32* %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %11)
  ret void
}

declare dso_local i32 @mp_printf(i32*, i8*, i32) #1

declare dso_local i32 @SWITCH_ID(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
